# RiskSampler

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml
configs/: default.yaml  prod_ifrs9.yaml
docs/: audit_checklist.md
env_setup/: post_install_risksampler_env_gitbash_windows.sh  requirements.txt  setup_risksampler_env_gitbash_windows.sh
notebooks/: risk_sampler_new_dataset.ipynb  risksampler_full_demo.ipynb
src/risk_sampler/: __init__.py  core.py  target_builder.py
src/risk_sampler/builders/: __init__.py  behavior_pd.py  target_builder.py
src/risk_sampler/strategies/: __init__.py  balanced.py  equal_vintage.py  expected_loss.py  recency_decay.py  stabilise_er.py  stratified_bootstrap.py
src/sample_weighter/: __init__.py  audit.py  core.py
src/sample_weighter/strategies/: balanced.py  equal_vintage.py  recency_decay.py
tests/: conftest.py  run_tests.sh
tests/contract/: test_regulatory_metrics.py
tests/integration/: test_full_pipeline.py
tests/test_results/: test_risksampler.txt
tests/unit/: test_behavior_pd_builder.py  test_risksampler.py  test_target_builder.py
