[project]
name = "risk_sampler"
version = "0.1.0"
description = "Sample weight toolkit for PD-Behavior models"
authors = [{name = "João Maia", email = "email@exemplo.com"}]
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "pyyaml",
    "bottleneck>=1.3.6",
    "ipykernel",
]

[project.optional-dependencies]
model = [
    "xgboost>=1.7.6",
    "lightgbm>=4.0.0",
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

